Solved small display issue on IE

--- a/src/main/resources/css/plugins/skyforms/custom/custom-sky-forms.css
+++ b/src/main/resources/css/plugins/skyforms/custom/custom-sky-forms.css
@@ -383,3 +383,7 @@
   width: 26px;
   /*color: #bfbfbf;*/
 }
+
+select::-ms-expand {
+  display: none;
+}
